<resources>
    <string name="app_name">PickMeUp Driver</string>
    <string name="logo_name"><b>PickMeUp</b></string>
    <string name="PSChoice">Who are You?</string>
    <string name="Aogo_name">Safe to School - Safe to Home</string>
    <string name="login"><b>LOGIN</b></string>
    <string name="enter_phone_number"> Enter your Phone Number</string>
    <string name="enter_password"> Enter Password</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="remember_me">Remember Me</string>
    <string name="create_acc"><b>Create Account</b></string>
    <string name="ass_std"><b>Assigned Students</b></string>
    <string name="std_detail"><b>Student Detail</b></string>
    <string name="call_std"><b>Call Student</b></string>
    <string name="submit_milage"><b>SUBMIT</b></string>
    <string name="sch_std"><b>View Schedule</b></string>
    <string name="chnge_pass"><b>Change Password</b></string>
    <string name="schedule"><b>Schedule</b></string>
    <string name="van_log"><b>Van Log</b></string>
    <string name="my_profile"><b>My Profile</b></string>
    <string name="std_map"><b>View on Map</b></string>
    <string name="rate_us"><b>Rate Us</b></string>
    <string name="mark_pick"><b>Mark Pickup Attendance</b></string>
    <string name="mark_drop"><b>Mark Dropoff Attendance</b></string>
    <string name="att"><b>ATTENDANCE</b></string>
    <string name="sett"><b>Settings</b></string>
    <string name="pickup_att"><b>PickUp Attendance</b></string>
    <string name="dropoff_att"><b>DropOff Attendance</b></string>
    <string name="create_account"><u><b>Create Account</b></u></string>
    <string name="resendCode"><u><b>Resend Code</b></u></string>
    <string name="full_name"> Enter Full Name</string>
    <string name="email"> Enter Your Email Address</string>
    <string name="schedule_days"><b>DAYS</b></string>
    <string name="schedule_PICKUP"><b>PICKUP TIME</b></string>
    <string name="DROPOFF"><b>DROPOFF TIME</b></string>
    <string name="LEAVE"><b>LEAVE</b></string>
    <string name="change"><b>CHANGE</b></string>
    <string name="address"> Enter your Home Full Address</string>
    <string name="km_travel"> Enter the travelled Kilometers</string>
    <string name="old_pass"> Current Password</string>
    <string name="new_pass"> New Password</string>
    <string name="con_pass"> Confirm Password</string>
    <string name="sugg"> Enter any Suggesstions (if Have) </string>
    <string name="fuel_consumption"> Enter the fuel consumption</string>
    <string name="maintenance"> Enter the Maintenance cost (if any)</string>
    <string name="institute_Name"> Enter Your Institute Address</string>
    <string name="next_btn"> NEXT</string>

    <string name="tagLine">Safe to School - Safe to Home</string>

    <string name="otp_code"><b>code</b></string>
    <string name="submit"><b>Submit</b></string>
    <string name="complaints"><b>COMLAINTS</b></string>
    <string name="filled_complaints"><b>Filed COMLAINTS</b></string>
    <string name="add_new_complaints"><b>File new Complaint</b></string>
    <string name="add_new_complaints_title"><b>Add new <br />Complaint</b></string>
    <string name="view_exist_complaints"><b>View Filed Complaints</b></string>
    <string name="otp_verify"><b>Verification</b></string>
    <string name="otp_desc">Enter one time code sent on your phone No.</string>
    <string name="c_title"> Complaint Title</string>
    <string name="c_desc"> Complaint Description (max 500 words)</string>
    <string name="forget_password_txt"><b>Forget Password</b></string>
    <string name="new_credentials"><b>New Credentials</b></string>
    <string name="Student_btn"><b>Student</b></string>
    <string name="Parent_btn"><b>Parent</b></string>
    <string name="password_updated"><b>Password Updated</b></string>
    <string name="forget_password_desc">Provide your Accounts Phone_No for which you want to reset your password</string>
    <string name="make_selection_desc">Select which contact detail should we use to reset your password</string>
    <string name="new_credentials_desc">Your Identity has been verified!<br />Set your new Password</string>
    <string name="password_update_desc">Your Password has been updated!</string>
    <string name="vis_sms">Via SMS: </string>
    <string name="vis_email">Via Email: </string>
    <string name="navogation_drawer_open">Open Navigation drawer</string>
    <string name="navogation_drawer_closed">Close Navigation drawer</string>

    <string name="signUp"><b>SignUp</b></string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_splash_screen">Splash_Screen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_tracking">Map</string>
    <string name="title_activity_student_map">Map</string>
</resources>