<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ViewStdDetail">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/layout"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/viewDriver_back_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:transitionName="transition_back_button" />

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/material_on_surface_stroke"
                    android:onClick="callBack">

                </Button>
            </RelativeLayout>

            <TextView
                android:id="@+id/complaint_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="11dp"
                android:text="@string/std_detail"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:transitionName="transition_crrate_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/profile">

            </ImageView>

            <TextView
                android:id="@+id/view_Driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/open_sans"
                android:padding="5dp"
                android:scrollbars="vertical"
                android:text=""
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black">

            </View>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="2dp"
                android:onClick="viewSchedule"
                android:text="@string/sch_std"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:backgroundTint="#0d6efd"
                app:cornerRadius="16dp"
                app:elevation="5dp"
                app:icon="@drawable/ic_baseline_visibility_24"
                app:iconGravity="textStart">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="2dp"
                android:onClick="makecallStudent"
                android:text="@string/call_std"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:backgroundTint="#008000"
                app:cornerRadius="16dp"
                app:elevation="5dp"
                app:icon="@drawable/ic_baseline_call_24"
                app:iconGravity="textStart">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="2dp"
                android:onClick="viewonMap"
                android:text="@string/std_map"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:backgroundTint="#ffc107"
                app:cornerRadius="16dp"
                app:elevation="5dp"
                app:icon="@drawable/ic_baseline_location_on_24"
                app:iconGravity="textStart">
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>


    </LinearLayout>

</ScrollView>