<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Attendance">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/layout"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/viewDriver_back_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:transitionName="transition_back_button" />

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/material_on_surface_stroke"
                    android:onClick="callBack">

                </Button>
            </RelativeLayout>

            <TextView
                android:id="@+id/complaint_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="11dp"
                android:text="@string/att"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:transitionName="transition_crrate_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/attendance2">

            </ImageView>




            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black">

            </View>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                android:onClick="markpickup"
                android:text="@string/mark_pick"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="#0d6efd"
                app:cornerRadius="16dp"
                app:elevation="5dp"
                app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
                app:iconGravity="textEnd">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:onClick="markdropoff"
                android:text="@string/mark_drop"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="#0d6efd"
                app:cornerRadius="16dp"
                app:elevation="5dp"
                app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
                app:iconGravity="textEnd">
            </com.google.android.material.button.MaterialButton>

        </LinearLayout>


    </LinearLayout>

</ScrollView>